Resolved add comment modal layout issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -1428,7 +1428,7 @@ body:not(.ios-safari-composer-hacks) #reply-control.open,
   }
 
   #reply-title,
-  .with-tags.with-category .category-input,
+  .with-category .category-input,
   .category-input+.mini-tag-chooser,
   .submit-panel {
     margin: 0;
